added navara-assessment module, added other puzzles module, added puzzle sites module